Add PK and FK to dimension and fact tables

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "4          10       2022             5  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "6                   6              6.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "[1921 rows x 2 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "6             6         6.0             Group Ride"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "3                  3             3         No Charge"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "4           5  Staten Island            Arden Heights    Boro Zone"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
        "4           Boro Zone  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
        "4            Boro Zone  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
        "4                    0.3         13.80                   2.5         0.00  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,16 +1191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "68"
+       "4"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1209,54 @@
     "from sqlalchemy import create_engine\n",
     "\n",
     "engine = create_engine('postgresql://postgres:Clarence20231@localhost:5432/uber_de')\n",
-    "fact_table.to_sql(\"fact_table\", engine, if_exists='replace', index=False)"
+    "\n",
+    "fact_table.to_sql(\"fact_table\", engine, if_exists='replace', index=True)\n",
+    "passenger_count_dim.to_sql(\"passenger_count_dimension\", engine, if_exists='replace', index=False)\n",
+    "trip_distance_dim.to_sql(\"trip_distance_dimension\", engine, if_exists='replace', index=False)\n",
+    "rate_code_dim.to_sql(\"rate_code_dimension\", engine, if_exists='replace', index=False)\n",
+    "pickup_location_dim.to_sql(\"pickup_location_dimension\", engine, if_exists='replace', index=False)\n",
+    "dropoff_location_dim.to_sql(\"dropoff_location_dimension\", engine, if_exists='replace', index=False)\n",
+    "datetime_dim.to_sql(\"datetime_dimension\", engine, if_exists='replace', index=False)\n",
+    "payment_method_dim.to_sql(\"payment_method_dimension\", engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alter_passenger_dim = \"\"\"ALTER TABLE passenger_count_dimension ADD PRIMARY KEY (passenger_count_id)\"\"\"\n",
+    "alter_distance_dim = \"\"\"ALTER TABLE trip_distance_dimension ADD PRIMARY KEY (trip_distance_id)\"\"\"\n",
+    "alter_rate_dim = \"\"\"ALTER TABLE rate_code_dimension ADD PRIMARY KEY (rate_code_id)\"\"\"\n",
+    "alter_pickup_dim = \"\"\"ALTER TABLE pickup_location_dimension ADD PRIMARY KEY (pickup_location_id)\"\"\"\n",
+    "alter_dropoff_dim = \"\"\"ALTER TABLE dropoff_location_dimension ADD PRIMARY KEY (dropoff_location_id)\"\"\"\n",
+    "alter_payment_dim = \"\"\"ALTER TABLE payment_method_dimension ADD PRIMARY KEY (payment_method_id)\"\"\"\n",
+    "alter_datetime_dim = \"\"\"ALTER TABLE datetime_dimension ADD PRIMARY KEY (datetime_id)\"\"\"\n",
+    "\n",
+    "add_primary_key_list=  [alter_passenger_dim, alter_distance_dim, alter_rate_dim, alter_pickup_dim, alter_dropoff_dim, alter_payment_dim, alter_datetime_dim]\n",
+    "for table_pk in add_primary_key_list:\n",
+    "    cursor.execute(alter_datetime_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alter_fact_table_pk = \"\"\"ALTER TABLE fact_table ADD PRIMARY KEY (index)\"\"\"\n",
+    "alter_passenger_fk = \"\"\"ALTER TABLE fact_table ADD CONSTRAINT fk_passenger_count_id FOREIGN KEY (passenger_count_id) REFERENCES passenger_count_dimension(passenger_count_id)\"\"\"\n",
+    "alter_distance_fk = \"\"\"ALTER TABLE fact_table ADD CONSTRAINT fk_trip_distance_id FOREIGN KEY (trip_distance_id) REFERENCES trip_distance_dimension(trip_distance_id)\"\"\"\n",
+    "alter_rate_fk = \"\"\"ALTER TABLE fact_table ADD CONSTRAINT fk_rate_code_id FOREIGN KEY (rate_code_id) REFERENCES rate_code_dimension(rate_code_id)\"\"\"\n",
+    "alter_pickup_fk = \"\"\"ALTER TABLE fact_table ADD CONSTRAINT fk_pickup_location_id FOREIGN KEY (pickup_location_id) REFERENCES pickup_location_dimension(pickup_location_id)\"\"\"\n",
+    "alter_dropoff_fk = \"\"\"ALTER TABLE fact_table ADD CONSTRAINT fk_dropoff_location_id FOREIGN KEY (dropoff_location_id) REFERENCES dropoff_location_dimension(dropoff_location_id)\"\"\"\n",
+    "alter_payment_fk = \"\"\"ALTER TABLE fact_table ADD CONSTRAINT fk_payment_method_id FOREIGN KEY (payment_method_id) REFERENCES payment_method_dimension(payment_method_id)\"\"\"\n",
+    "alter_datetime_fk = \"\"\"ALTER TABLE fact_table ADD CONSTRAINT fk_datetime_id FOREIGN KEY (datetime_id) REFERENCES datetime_dimension(datetime_id)\"\"\"\n",
+    "\n",
+    "alter_fact_table_list = [alter_fact_table_pk, alter_passenger_fk, alter_distance_fk, alter_rate_fk, alter_pickup_fk, alter_dropoff_fk, alter_payment_fk, alter_datetime_fk]\n",
+    "for key in alter_fact_table_list:\n",
+    "    cursor.execute(key)"
    ]
   },
   {
