--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1264,6 +1264,235 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Top 10 pickup location based on number of trips\n",
+    "# Tips based on payment method\n",
+    "# Total number of trips by passenger count\n",
+    "# Average fare amount by hour of day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT * FROM fact_table\n",
+    "\"\"\"\n",
+    "\n",
+    "query2 = \"\"\" \n",
+    "SELECT * FROM trip_distance_dimension\"\"\"\n",
+    "\n",
+    "query3 = \"\"\"\n",
+    "SELECT pickup_location_id, COUNT(pickup_location_id)\n",
+    "FROM fact_table\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>52.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>25.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20.779043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>18.605324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17.139698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14.833975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14.501763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13.373070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13.292240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>4</td>\n",
+       "      <td>23</td>\n",
+       "      <td>12.831897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.583751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12.470857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12.424541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12.288049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>4</td>\n",
+       "      <td>22</td>\n",
+       "      <td>7.125000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    0   1          2\n",
+       "0   5  21  52.000000\n",
+       "1   4  21  25.000000\n",
+       "2   5   5  20.779043\n",
+       "3   5   6  18.605324\n",
+       "4   5   7  17.139698\n",
+       "5   4  14  15.000000\n",
+       "6   5   8  14.833975\n",
+       "7   5   4  14.501763\n",
+       "8   5   9  13.373070\n",
+       "9   5   0  13.292240\n",
+       "10  4  23  12.831897\n",
+       "11  5   1  12.583751\n",
+       "12  5   3  12.470857\n",
+       "13  5   2  12.424541\n",
+       "14  5  10  12.288049\n",
+       "15  5  11  11.666667\n",
+       "16  4  22   7.125000"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# query_data = \"\"\"\n",
+    "# SELECT p.pickup_zone, COUNT(f.pickup_location_id) as count\n",
+    "# FROM fact_table f\n",
+    "# JOIN pickup_location_dimension p \n",
+    "# ON f.pickup_location_id = p.pickup_location_id\n",
+    "# GROUP BY p.pickup_zone\n",
+    "# ORDER BY count DESC\n",
+    "# LIMIT 10\n",
+    "# \"\"\"\n",
+    "\n",
+    "query_data = \"\"\" \n",
+    "SELECT d.pick_weekday, d.pick_hour, avg(f.fare_amount) as total_fare\n",
+    "FROM  fact_table f\n",
+    "JOIN datetime_dimension d\n",
+    "ON d.datetime_id = f.datetime_id\n",
+    "GROUP BY d.pick_weekday, d.pick_hour\n",
+    "ORDER BY total_fare DESC\n",
+    "\"\"\"\n",
+    "\n",
+    "# query_data = \"\"\" \n",
+    "# SELECT p.payment_type_name , sum(f.fare_amount)\n",
+    "# JOIN payment_method_dimension p\n",
+    "# ON p.payment_method_id = f.payment_method_id\n",
+    "# GROUP BY p.payment_type_name\n",
+    "# ORDER BY p.payment_type_name\n",
+    "# \"\"\"\n",
+    "\n",
+    "cursor.execute(query_data)\n",
+    "rows= cursor.fetchall()\n",
+    "pg_fact = pd.DataFrame(rows)\n",
+    "pg_fact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
